src/Path.h

    
    
    PATH_DATA *     Path_New (
        void
    );
    
    
    PATH_DATA *     Path_NewA (
        const
        char            *pStr
    );
    PATH_DATA *     Path_NewFromAStr (
        ASTR_DATA       *pStr
    );
    //---------------------------------------------------------------
    //                      *** Properties ***
    //---------------------------------------------------------------

    const
    char *          Path_getData (
        PATH_DATA       *this
    );
    ASTR_DATA *     Path_getAStr (
        PATH_DATA       *this
    );
    /*!
     @return:   return the number of Unicode characters in
                the path, not the actual size of the path in
                memory.  -1 indicates an error occurred.
     */
    uint32_t        Path_getLength (
        PATH_DATA      *this
    );
    
    //---------------------------------------------------------------
    //                      *** Methods ***
    //---------------------------------------------------------------

    // AppendAStr() just appends the string without any further
    // changes.
    ERESULT         Path_AppendA (
        PATH_DATA       *this,
        const
        char            *pStrA
    );
    // AppendAStr() just appends the string without any further
    // changes.
    ERESULT         Path_AppendAStr (
        PATH_DATA       *this,
        ASTR_DATA       *pStr
    );
    /*!
     Clean up the Path by removing "//", "/./" or "/../" combinations,
     replace a leading '~' with the $HOME or $HOMEDRIVE Environment variable
     and expand environment variables as in ExpandVars().
     @param     this        object pointer
     @param     pFindA      optional method to find the environment variables by name
                            for substitution into the path
     @param     pFindObj    optional Object pointer for pFindA
     @return    If successful, ERESULT_SUCCESS. Otherwise, an ERESULT_* error.
     */
    ERESULT         Path_Clean (
        PATH_DATA       *this,
        ASTR_DATA *     (*pFindA)(OBJ_ID, const char *pName),
        OBJ_ID          pFindObj
    );
    /*!
     Create an empty file for the path. If the file exists, ignore.
     @return    ERESULT_SUCCESS if successful, otherwise an error result code.
     */
    ERESULT         Path_CreateEmpty (
        PATH_DATA       *this
    );
    ERESULT         Path_Delete (
        PATH_DATA       *this
    );
    bool            Path_Exists (
        PATH_DATA       *this
    );
    /*!
     Substitute hash values or environment variables into the current string
     using a BASH-like syntax with the hash value having the highest priority.
     Variable names should have the syntax of:
     '$' '{'[a-zA-Z_][a-zA-Z0-9_]* '}'.
     Substitutions are not rescanned after insertion.
     @param     this    object pointer
     @param     pFindA      optional method to find the variable by name
     @param     pFindObj    Object for FindA
     @return    ERESULT_SUCCESS if successful.  Otherwise, an ERESULT_* error code
     is returned.
     */
    ERESULT         Path_ExpandVars (
        PATH_DATA       *this,
        ASTR_DATA *     (*pFindA)(OBJ_ID, const char *pName),
        OBJ_ID          pFindObj
    );
    /*!
     Split the Path into its 3 basic components of the drive, directory and
     FileName.  If a scan from the left of ':' fails, then no drive is
     assumed and OBJ_NIL is returned for the drive.  A scan from right to
     left for a trailing '/' is searched to find the end of the directory
     portion of the Path.  It also denotes the beginning of the file name.
     So, if the Path consists of optionally the drive and the directory
     portions, it must end in a '/' to be properly parsed.

     path := [drive ':']['/'dir | '.' | ".."] ('/'dir)* [file_name ['.' extension]]
     dir := '*' | directory_name
     where directtory_name, file_name and extension may contain '*' | '?' for
     file matching.

     If the path provided is /dir/dir/dir, then we will see the right-most dir
     as a file_name except if it is '.' or "..".  If you know that the right-
     most entry is a dir, you should append it with a leading '/' to the
     scanned directory entry and delete the returned file_name.

     The following formats are supported by this method:
     [drive ':'] ('/' dir)* '/' [file_name ['.' extension]]
     [drive ':'] file_name ['.' extension]
     [] means optional. Note that if we are dealing with a directory then we
     should have a trailing '/' to identify it as a directory rather than a
     file name. Without the trailing '/', the last dirctory will be returned
     as the file name.

     @param     this        object pointer
     @param     ppDrive     pointer to ASTR object pointer which will contain
                            the drive if it exists in the Path.  The drive
                            returned is without its ':' separator.
     @param     ppDir       pointer to an AStr object pointer which will contain
                            directory portion of the Path.
     @param     ppFileName  optional pointer to an AStr object pointer where the
                            leading file Path will be returned if present.
     @param     ppFileExt   optional pointer to an AStr object pointer where the
                            trailing file extension will be returned if present.
     @return    If successful, ERESULT_SUCCESS, otherwise ERESULT_* error.
     */
    ERESULT         Path_Split (
        PATH_DATA        *this,
        ASTR_DATA       **ppDrive,
        ASTR_DATA       **ppDir,
        ASTR_DATA       **ppFileName,
        ASTR_DATA       **ppFileExt
    );
    /*!
     Create a string that describes this object and the objects within it in
     HJSON formt. (See hjson object for details.)
     Example:
     @code
     ASTR_DATA      *pDesc = Path_ToJson(this);
     @endcode
     @param     this    object pointer
     @return    If successful, an AStr object which must be released containing the
                JSON text, otherwise OBJ_NIL and LastError set to an appropriate
                ERESULT_* error code.
     @warning   Remember to release the returned AStr object.
     */
    ASTR_DATA *     Path_ToJson (
        PATH_DATA   *this
    );
    /*!
     Create a string that describes this object and the objects within it.
     Example:
     @code 
        ASTR_DATA      *pDesc = Path_ToDebugString(this,4);
     @endcode 
     @param     this    object pointer
     @param     indent  number of characters to indent every line of output, can be 0
     @return    If successful, an AStr object which must be released containing the
                description, otherwise OBJ_NIL.
     @warning   Remember to release the returned AStr object.
     */
    ASTR_DATA *    Path_ToDebugString (
        PATH_DATA      *this,
        int            indent
    );